[project]
name = "Infinity-API"
version = "3.0.0"
description = "RESTFULL open API for rocketpy"
requires-python = ">=3.12"
authors = [
  {name = "Gabriel Barberini", email = "gabrielbarberinirc@gmail.com"}
]
maintainers = [
  {name = "Aasit", email = "aasitvora1999@gmail.com"},
  {name = "Luiz Mota", email = "luiz.mota1999@usp.br"}
]
readme = "README.md"
keywords = ["rocketpy", "API", "simulation", "rocket", "flight"]
classifiers = [
  "Development Status :: Production",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "http://api.rocketpy.org/"
Documentation = "http://api.rocketpy.org/docs"
Repository = "https://github.com/RocketPy-Team/infinity-api"
"Bug Tracker" = "https://github.com/RocketPy-Team/Infinity-API/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.black]
line-length = 79
include = '\.py$'
skip-string-normalization = true

[tool.pylint]
max-line-length = 79
disable = """
    missing-module-docstring,
    missing-function-docstring,
    missing-class-docstring,
    too-few-public-methods,
    too-many-public-methods,
    line-too-long,
    duplicate-code,
    logging-fstring-interpolation,
    attribute-defined-outside-init,
    broad-exception-caught,
    raise-missing-from,
    too-many-instance-attributes,
    import-error,
    too-many-arguments,
    redefined-outer-name,
    too-many-positional-arguments,
    no-member,
    protected-access,
    import-outside-toplevel,
    too-many-statements,
"""

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "N", "Q"]
ignore = ["N815", "E501", "Q000", "E402", "N802"]
fixable = [
    "F401",
]
